--- a/.github/workflows/solar_sync.yml
+++ b/.github/workflows/solar_sync.yml
@@ -1,32 +1,33 @@
-name: Solar Sync Relay
+name: Solar Relay Sync
 
 on:
   schedule:
+    # Run every 5 minutes
     - cron: "*/5 * * * *"
-  workflow_dispatch:
+  workflow_dispatch: # Allows manual triggering from GitHub UI
 
 jobs:
-  run_solar_relay:
+  run_solar_relay_script:
     runs-on: ubuntu-latest
 
-    env:
-      EG4_USER: ${{ secrets.EG4_USER }}
-      EG4_PASS: ${{ secrets.EG4_PASS }}
-      SENSECRAFT_KEY: ${{ secrets.SENSECRAFT_KEY }}
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.9'
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.9'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install requests
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
 
-    - name: Run solar_relay.py
-      run: python solar_relay.py
+      - name: Run solar_relay.py script
+        run: python solar_relay.py
+        env:
+          EG4_USER: ${{ secrets.EG4_USER }}
+          EG4_PASS: ${{ secrets.EG4_PASS }}
+          EG4_STATION_ID: ${{ secrets.EG4_STATION_ID }}
+          SENSECRAFT_KEY: ${{ secrets.SENSECRAFT_KEY }}
